--- a/portal/chat.html
+++ b/portal/chat.html
@@ -13,7 +13,7 @@
   <meta name="theme-color" content="#FAF8F5" />
   <meta name="mobile-web-app-capable" content="yes" />
 
-  <link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="/static/style.css">
 </head>
 
 <body class="mode-mobile">
@@ -87,7 +87,7 @@
     </div>
   </div>
 
-  <script src="app.js"></script>
+  <script src="/static/app.js" defer></script>
 </body>
 
 </html>
