세이지채팅

--- a/portal/chat.html
+++ b/portal/chat.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="/static/style.css">
 </head>
 
-<body class="mode-mobile">
+<body class="mode-mobile bg-forest-book">
   <div class="app-shell">
     <header class="top-region">
       <div class="top-bar">
