--- a/portal/chat.html
+++ b/portal/chat.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Spacetime Director – Chat</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 <body class="mode-mobile bg-forest-book">
   <div class="app">
     <!-- 상단 세이지 패널 -->
@@ -284,3 +292,4 @@
     });
   </script>
 </body>
+</html>
