--- a/portal/chat.html
+++ b/portal/chat.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Spacetime Director – Chat</title>
-  <link rel="stylesheet" href="/portal/style.css" />
+  <link rel="stylesheet" href="/static/style.css" />
 </head>
 <body class="mode-mobile bg-forest-book">
   <div class="app">
