--- a/portal/chat.html
+++ b/portal/chat.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8" />
   <title>Sowon · Chat Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <style>
     :root {
       --vh: 1vh;
@@ -40,7 +42,7 @@
     }
 
     body.app-bg-forest {
-      background-image: url("backgrounds/forest_book.jpg");
+      background-image: url("/static/backgrounds/forest_book.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
