--- a/portal/chat.html
+++ b/portal/chat.html
@@ -49,7 +49,8 @@
     }
 
     .app {
-      height: calc(var(--vh) * 100);
+      min-height: 100vh;
+      height: 100%;
       padding: 12px 12px calc(12px + env(safe-area-inset-bottom));
       display: flex;
       flex-direction: column;
@@ -662,17 +663,6 @@
   </div>
 
   <script>
-    // 아이폰 vh 대응
-    function setVh() {
-      document.documentElement.style.setProperty(
-        "--vh",
-        window.innerHeight * 0.01 + "px"
-      );
-    }
-    window.addEventListener("resize", setVh);
-    window.addEventListener("orientationchange", setVh);
-    setVh();
-
     const messagesInner = document.getElementById("messagesInner");
     const pinCapsule = document.getElementById("pinCapsule");
     const pinText = document.getElementById("pinText");
