--- a/portal/chat.html
+++ b/portal/chat.html
@@ -49,7 +49,7 @@
     }
 
     .app {
-      height: 100%;
+      height: 100dvh;
       padding: 12px 12px calc(12px + env(safe-area-inset-bottom));
       display: flex;
       flex-direction: column;
