--- a/portal/chat.html
+++ b/portal/chat.html
@@ -241,7 +241,7 @@
     }
 
     .messages-inner {
-      padding: 4px 4px 8px;
+      padding: 4px 4px 72px;
     }
 
     .msg-row {
@@ -377,6 +377,8 @@
     /* 작성 영역 */
 
     .composer {
+      position: sticky;
+      bottom: 0;
       flex: 0 0 auto;
       display: flex;
       flex-direction: column;
