--- a/portal/chat.html
+++ b/portal/chat.html
@@ -29,9 +29,8 @@
     html, body {
       margin: 0;
       padding: 0;
-      min-height: 100%;
-      overflow-x: hidden;
-      overflow-y: auto;
+      height: 100%;
+      overflow: hidden; /* 페이지 자체는 스크롤 안 함 */
       font-family: -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
       background: var(--bg-cream);
       color: var(--text-main);
@@ -50,7 +49,7 @@
     }
 
     .app {
-      min-height: 100vh;
+      height: 100vh; /* 화면 높이 = 앱 높이 */
       padding: 12px 12px calc(12px + env(safe-area-inset-bottom));
       display: flex;
       flex-direction: column;
@@ -377,8 +376,6 @@
     /* 작성 영역 */
 
     .composer {
-      position: sticky;
-      bottom: 0;
       flex: 0 0 auto;
       display: flex;
       flex-direction: column;
